@@ -1,0 +1,138 @@
+    body {
+      /* background-color: cornflowerblue; */
+    }
+
+    #imgContainer img {
+      width: 100vw;
+      height: 100vh;
+    }
+
+    /* ******************** */
+    /* ******************** */
+    .loader-background {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: #444957;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .loaderTxt {
+      color: white;
+      /* border: 1px green solid; */
+      position: absolute;
+      /* top:25%; */
+      top: 70%;
+      letter-spacing: 1rem;
+    }
+
+    .loader-wrapper {
+      width: 300px;
+      height: 300px;
+    }
+
+    .loader-wrapper img {
+      /* border: 1px green solid; */
+      /* z-index: 5;
+      position: relative; */
+      /* display: block; */
+      transform: translate(0, 50%)
+    }
+
+    /* ******************** */
+    /* LOADER ANIMATION */
+    /* ******************** */
+    /* RING */
+
+    .lds-ring div {
+      box-sizing: border-box;
+      display: block;
+      position: absolute;
+      /* width: 51px;
+      height: 51px; */
+      width: 300px;
+      height: 300px;
+      /* margin: 6px; */
+      /* margin: auto; */
+      border: 6px solid #fff;
+      /* border: 6px solid red; */
+      border-radius: 50%;
+      animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+      border-color: #FD735D transparent #25A7AF transparent;
+    }
+
+    .lds-ring {
+      /* display: inline-block; */
+      position: absolute;
+      /* z-index: 5; */
+      /* width: 64px;
+      height: 64px; */
+      width: 300px;
+      height: 300px;
+    }
+
+    .lds-ring div:nth-child(1) {
+      animation-delay: -0.45s;
+    }
+
+    .lds-ring div:nth-child(2) {
+      animation-delay: -0.3s;
+    }
+
+    .lds-ring div:nth-child(3) {
+      animation-delay: -0.15s;
+    }
+
+    @keyframes lds-ring {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    /* BOUNCE BALL */
+
+    .bounceball {
+      position: relative;
+      display: inline-block;
+      height: 37px;
+      width: 15px;
+    }
+
+    .bounceball:before {
+      position: absolute;
+      content: '';
+      display: block;
+      top: 0;
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      /* background-color: #fbae17; */
+      background-color: #FD735D;
+      transform-origin: 50%;
+      /* animation: bounce 500ms alternate infinite ease; */
+    }
+
+    /* @keyframes bounce {
+      0% {
+        top: 30px;
+        height: 5px;
+        border-radius: 60px 60px 20px 20px;
+        transform: scaleX(2);
+      }
+      35% {
+        height: 15px;
+        border-radius: 50%;
+        transform: scaleX(1);
+      }
+      100% {
+        top: 0;
+      }
+    } */
