@@ -1,0 +1,90 @@
+<!DOCTYPE html>
+
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+
+  <meta name="author" content="BELLOC Boris">
+  <link rel="shortcut icon" type="image/png" href="../../img/poc.png" />
+
+  <!-- * CSS then JQUERY then JS !! -->
+  <!-- CDN BOOTSTRAP 4.0 -->
+  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
+    integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
+  <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js'
+    integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous'>
+  </script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js'
+    integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous'>
+  </script>
+  <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'
+    integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous'>
+  </script>
+
+  <!------ Custom ressources ---------->
+  <link rel='stylesheet' type='text/css' href='loaderConnected.css' />
+  <!-- <script src='JS_file_name.js'></script> -->
+  <!------ END Custom ressources ---------->
+
+
+  <title>Website loader connected</title>
+
+
+</head>
+
+<body>
+
+
+
+  <!-- CONTENT -->
+
+  <!-- LOADER -->
+  <div class="loader-background">
+
+    <div class="loaderTxt">
+      <h1>CHARGEMENT</h1>
+    </div>
+
+    <div class="loader-wrapper text-center ">
+      <!-- <div class="bounceball"></div> -->
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <img src="BB.png" alt="">
+
+    </div>
+  </div>
+
+  <!-- <span class="loader"><span class="loader-inner"></span></span> -->
+
+
+  <!-- <div class="container-fluid no-gutters">
+    <div class="row">
+      <div class="col-12 p-0">
+        
+        <div id="imgContainer">
+          <img class="img-fluid" src="https://picsum.photos/1600/900.jpg" />
+        </div>
+
+      </div>
+    </div>
+  </div> -->
+
+  <!-- CONTENT -->
+
+  <!-- * official jQuery full -->
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
+
+  <!-- <script>
+    $(window).on("load", function () {
+      $(".loader-wrapper").fadeOut("slow");
+    });
+  </script> -->
+
+</body>
+
+</html>
