@@ -8,12 +8,13 @@ _/ if you'r looking for a repo more focused on python : https://github.com/boris
 
 <br/>
 
-SIMPLE_POC :dizzy:
+Main folder : SIMPLE_POC :dizzy:
 =======
 _Fast & short poc_ ; only one function
 
 File name | lang ? | what ?
 ----| ----| ----
+ImgFullscreenRandom.html | Css | Random image full screen
 rainbowTextAnimation.html | Css | Css animation change text color 'rainbow'
 verticalAlign1.html | bootstrap 4 | Align a text and an image verticaly with flex box / or css
 arrowCSS.html | CSS | a triangle and its shadow made with css; perfect for tooltips
@@ -29,17 +30,18 @@ buttonFunction.html | HTML / JS | Launch a JS function when button clicked
 
 <br/><br/>
 
-HTML_CSS_JS :family:
+Main folder : HTML_CSS_JS :family:
 =======
 
-Main Folder | Folder | Additional languages and/or framework used | What | TODO "one day"
- ---- | ---- | ---- | ----| ----
-HTML_CSS_JS | loaderBlueCounter | Css, jQuery | Blue loader | todo: connect it to page loading
-HTML_CSS_JS | passwordReveal | VueJS, Bootstrap | add an icons near a password input to let the user reveal his password before validation | /
-HTML_CSS_JS | reCaptcha | JavaScript, Google API reCaptcha, Bootstrap | reCaptcha module | /
-HTML_CSS_JS | dragNdrop | bootstrap 4.1.3 (only for beautify/layout) | drag and drop a list of images or import them with a classic button | /
-:collision:HTML_CSS_JS | Navbar_animated#1 | bootstrap 3.3.1, jquery 2.1.1 | The header/Navbar change color when you start scrolling and resize; +responsive | Change from bootstrap 331 to 4xx; **almost done, see file b4_navbar.html**
-:collision:HTML_CSS_JS | Carousel | bootstrap 3.3.1, jquery 2.1.1, own.carousel 2.3.4 | a Carousel with 3 pictures...
+child Folder | Additional languages and/or framework used | What | TODO "one day"
+---- | ---- | ----| ----
+websiteLoader | jQuery | Website loader connected
+loaderBlueCounter | Css, jQuery | Blue loader | todo: connect it to page loading
+passwordReveal | VueJS, Bootstrap | add an icons near a password input to let the user reveal his password before validation | /
+reCaptcha | JavaScript, Google API reCaptcha, Bootstrap | reCaptcha module | /
+dragNdrop | bootstrap 4.1.3 (only for beautify/layout) | drag and drop a list of images or import them with a classic button | /
+:collision:Navbar_animated#1 | bootstrap 3.3.1, jquery 2.1.1 | The header/Navbar change color when you start scrolling and resize; +responsive | Change from bootstrap 331 to 4xx; **almost done, see file b4_navbar.html**
+:collision: Carousel | bootstrap 3.3.1, jquery 2.1.1, own.carousel 2.3.4 | a Carousel with 3 pictures...
 
 
 :collision: -> Poc moved in temporary folder; _poc to clean_
