@@ -1,3 +1,6 @@
+2019_09_13 : Website loader connected to page loader
+2019_09_13 : SimplePoc img full screen
+
 2019_09_04 : Loader blue counter
 
 2019_09_02 ; Simple poc rainbox text animation
